--- a/Task 0/Task 0.csproj
+++ b/Task 0/Task 0.csproj
@@ -39,14 +39,14 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="MediaFile.cs" />
+        <Compile Include="MediaFile\MediaFile.cs" />
+        <Compile Include="MediaFile\Music.cs" />
+        <Compile Include="MediaFile\Photo.cs" />
+        <Compile Include="MediaFile\VideoFile.cs" />
         <Compile Include="Multimedia.cs" />
-        <Compile Include="Music.cs" />
-        <Compile Include="Photo.cs" />
         <Compile Include="Playlist.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="VideoFile.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
