--- a/Task 0/Task 0.csproj
+++ b/Task 0/Task 0.csproj
@@ -39,6 +39,8 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Interfaces\IPlayer.cs" />
+        <Compile Include="Interfaces\IPlaylist.cs" />
         <Compile Include="MediaFile\MediaFile.cs" />
         <Compile Include="MediaFile\Music.cs" />
         <Compile Include="MediaFile\Photo.cs" />
