--- a/Task 0/Task 0.csproj
+++ b/Task 0/Task 0.csproj
@@ -40,6 +40,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Interfaces\IMultimedia.cs" />
+        <Compile Include="Interfaces\IPlay.cs" />
         <Compile Include="Interfaces\IPlayer.cs" />
         <Compile Include="Interfaces\IPlaylist.cs" />
         <Compile Include="MediaFile\MediaFile.cs" />
