--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .idea/
 EPAM/
+.idea/.idea.EPAM/.idea/contentModel.xml
+.idea/.idea.EPAM/.idea/contentModel.xml
+.idea/.idea.EPAM/.idea/contentModel.xml
+.idea/.idea.EPAM/.idea/workspace.xml
+.idea/.idea.EPAM/.idea/contentModel.xml
+.idea/.idea.EPAM/.idea/workspace.xml
