Пофиксил мелкие недочёты

--- a/Task 1/Task 1.csproj
+++ b/Task 1/Task 1.csproj
@@ -41,12 +41,12 @@
         <Compile Include="Exceptions\InvalidPriceException.cs" />
         <Compile Include="Gift.cs" />
         <Compile Include="GiftItem.cs" />
-        <Compile Include="GiftItem\Candy.cs" />
-        <Compile Include="GiftItem\Cookie.cs" />
-        <Compile Include="GiftItem\Marshmallow.cs" />
-        <Compile Include="GiftItem\Sweetness.cs" />
-        <Compile Include="GiftItem\Toy.cs" />
-        <Compile Include="GiftItem\Waffles.cs" />
+        <Compile Include="Elements\Candy.cs" />
+        <Compile Include="Elements\Cookie.cs" />
+        <Compile Include="Elements\Marshmallow.cs" />
+        <Compile Include="Elements\Sweetness.cs" />
+        <Compile Include="Elements\Toy.cs" />
+        <Compile Include="Elements\Waffles.cs" />
         <Compile Include="Interfaces\IGift.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
