Added SortByName and SortByPrice

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ EPAM/
 .idea/.idea.EPAM/.idea/workspace.xml
 .idea/.idea.EPAM/.idea/contentModel.xml
 .idea/.idea.EPAM/.idea/workspace.xml
+Task 1/bin/
