--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .idea/
 EPAM/
-.idea/.idea.EPAM/.idea/contentModel.xml
-.idea/.idea.EPAM/.idea/contentModel.xml
-.idea/.idea.EPAM/.idea/contentModel.xml
-.idea/.idea.EPAM/.idea/workspace.xml
-.idea/.idea.EPAM/.idea/contentModel.xml
-.idea/.idea.EPAM/.idea/workspace.xml
 Task 1/bin/
+Task 1/obj/
+Task 2/obj/
+Task 2/bin/
