--- a/Task 2/Task 2.csproj
+++ b/Task 2/Task 2.csproj
@@ -38,19 +38,24 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Library\Text\IText.cs" />
+        <Compile Include="Library\Text\Parser\IParser.cs" />
+        <Compile Include="Library\Text\Parser\TextParser.cs" />
+        <Compile Include="Library\Text\Text.cs" />
+        <Compile Include="Library\Text\TextElements\Sentence\ISentence.cs" />
+        <Compile Include="Library\Text\TextElements\Sentence\Sentence.cs" />
+        <Compile Include="Library\Text\TextElements\Sentence\SentenceElements\Punctuation\EndOfSentenceMark.cs" />
+        <Compile Include="Library\Text\TextElements\Sentence\SentenceElements\Punctuation\Punctuation.cs" />
+        <Compile Include="Library\Text\TextElements\Sentence\SentenceElements\Punctuation\PunctuationMark.cs" />
+        <Compile Include="Library\Text\TextElements\Sentence\SentenceElements\SentenceItem.cs" />
+        <Compile Include="Library\Text\TextElements\Sentence\SentenceElements\Word.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="Text\IText.cs" />
-        <Compile Include="Text\Parser\IParser.cs" />
-        <Compile Include="Text\Parser\TextParser.cs" />
-        <Compile Include="Text\Text.cs" />
-        <Compile Include="Text\TextElements\Sentence\ISentence.cs" />
-        <Compile Include="Text\TextElements\Sentence\Sentence.cs" />
-        <Compile Include="Text\TextElements\Sentence\SentenceElements\Punctuation\EndOfSentenceMark.cs" />
-        <Compile Include="Text\TextElements\Sentence\SentenceElements\Punctuation\Punctuation.cs" />
-        <Compile Include="Text\TextElements\Sentence\SentenceElements\Punctuation\PunctuationMark.cs" />
-        <Compile Include="Text\TextElements\Sentence\SentenceElements\SentenceItem.cs" />
-        <Compile Include="Text\TextElements\Sentence\SentenceElements\Word.cs" />
+        <Compile Include="Writer\ConsoleWriter.cs" />
+        <Compile Include="Writer\IInfoWriter.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Library" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
