--- a/Task 2/Task 2.csproj
+++ b/Task 2/Task 2.csproj
@@ -33,6 +33,7 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="System" />
+        <Reference Include="System.Configuration" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
@@ -51,11 +52,17 @@
         <Compile Include="Library\Text\TextElements\Sentence\SentenceElements\Word.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Reader\TxtReader.cs" />
+        <Compile Include="Reader\IFileReader.cs" />
         <Compile Include="Writer\ConsoleWriter.cs" />
+        <Compile Include="Writer\FileWriter.cs" />
         <Compile Include="Writer\IInfoWriter.cs" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Library" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="App.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
