--- a/Task 2/Task 2.csproj
+++ b/Task 2/Task 2.csproj
@@ -57,6 +57,7 @@
         <Compile Include="Writer\ConsoleWriter.cs" />
         <Compile Include="Writer\FileWriter.cs" />
         <Compile Include="Writer\IInfoWriter.cs" />
+        <Compile Include="Writer\XmlWriter.cs" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Library" />
