--- a/Task 3/Task 3.csproj
+++ b/Task 3/Task 3.csproj
@@ -43,7 +43,11 @@
         <Compile Include="Call.cs" />
         <Compile Include="Client.cs" />
         <Compile Include="Contract.cs" />
+        <Compile Include="EndCallEventArgs.cs" />
+        <Compile Include="InCallEventArgs.cs" />
+        <Compile Include="OutCallEventArgs.cs" />
         <Compile Include="Port.cs" />
+        <Compile Include="PortState.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Tariff.cs" />
