--- a/Task 3/Task 3.csproj
+++ b/Task 3/Task 3.csproj
@@ -38,20 +38,22 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ATS entities\Client.cs" />
+        <Compile Include="ATS entities\Contract.cs" />
+        <Compile Include="ATS entities\Port.cs" />
+        <Compile Include="ATS entities\Tariff.cs" />
+        <Compile Include="ATS entities\Terminal.cs" />
         <Compile Include="ATS.cs" />
         <Compile Include="Billing.cs" />
         <Compile Include="Call.cs" />
-        <Compile Include="Client.cs" />
-        <Compile Include="Contract.cs" />
-        <Compile Include="EndCallEventArgs.cs" />
-        <Compile Include="InCallEventArgs.cs" />
-        <Compile Include="OutCallEventArgs.cs" />
-        <Compile Include="Port.cs" />
-        <Compile Include="PortState.cs" />
+        <Compile Include="Enum\PortState.cs" />
+        <Compile Include="EventArgs\InCallEventArgs.cs" />
+        <Compile Include="EventArgs\OutCallEventArgs.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="Tariff.cs" />
-        <Compile Include="Terminal.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Billing" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
