--- a/Task 3/Task 3.csproj
+++ b/Task 3/Task 3.csproj
@@ -38,23 +38,24 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ATS entities\Client.cs" />
-        <Compile Include="ATS entities\Contract.cs" />
-        <Compile Include="ATS entities\Port.cs" />
-        <Compile Include="ATS entities\PortInfo.cs" />
-        <Compile Include="ATS entities\Tariff.cs" />
-        <Compile Include="ATS entities\Terminal.cs" />
-        <Compile Include="ATS.cs" />
+        <Compile Include="ATS\ActiveCall.cs" />
+        <Compile Include="ATS\Contract\CallHistory.cs" />
+        <Compile Include="ATS\Contract\Contract.cs" />
+        <Compile Include="ATS\Contract\ContractEntities\Client.cs" />
+        <Compile Include="ATS\Contract\ContractEntities\Port.cs" />
+        <Compile Include="ATS\Contract\ContractEntities\PortInfo.cs" />
+        <Compile Include="ATS\Contract\ContractEntities\Tariff.cs" />
+        <Compile Include="ATS\Contract\ContractEntities\Terminal.cs" />
+        <Compile Include="ATS\Contract\IContract.cs" />
+        <Compile Include="ATS\ATS.cs" />
+        <Compile Include="ATS\IATS.cs" />
         <Compile Include="Billing.cs" />
-        <Compile Include="Call.cs" />
+        <Compile Include="Enum\CallType.cs" />
         <Compile Include="Enum\PortState.cs" />
         <Compile Include="EventArgs\InCallEventArgs.cs" />
         <Compile Include="EventArgs\OutCallEventArgs.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Billing" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
