--- a/Task 4/Task4.DAL/Task4.DAL.csproj
+++ b/Task 4/Task4.DAL/Task4.DAL.csproj
@@ -33,11 +33,14 @@
     </PropertyGroup>
     <ItemGroup>
       <Compile Include="DatabaseContext.cs" />
+      <Compile Include="GenericRepository.cs" />
+      <Compile Include="IGenericRepository.cs" />
     </ItemGroup>
     <ItemGroup>
       <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
         <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
       </Reference>
+      <Reference Include="System" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Task4.Model\Task4.Model.csproj">
