--- a/Task 4/Task4.BL/Task4.BL.csproj
+++ b/Task 4/Task4.BL/Task4.BL.csproj
@@ -34,6 +34,7 @@
     <ItemGroup>
       <Compile Include="CsvObject.cs" />
       <Compile Include="CsvObjectMap.cs" />
+      <Compile Include="FileHandler.cs" />
       <Compile Include="IParser.cs" />
       <Compile Include="Parser.cs" />
     </ItemGroup>
@@ -57,6 +58,7 @@
         <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
         <Private>True</Private>
       </Reference>
+      <Reference Include="System.Configuration" />
       <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
         <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
         <Private>True</Private>
@@ -76,6 +78,7 @@
       </Reference>
     </ItemGroup>
     <ItemGroup>
+      <None Include="App.config" />
       <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
