--- a/Task 4/Task4.DAL/Task4.DAL.csproj
+++ b/Task 4/Task4.DAL/Task4.DAL.csproj
@@ -32,9 +32,11 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-      <Compile Include="DatabaseContext.cs" />
-      <Compile Include="GenericRepository.cs" />
-      <Compile Include="IGenericRepository.cs" />
+      <Compile Include="EF\DatabaseContext.cs" />
+      <Compile Include="Interfaces\IRepository.cs" />
+      <Compile Include="Interfaces\IUnitOfWork.cs" />
+      <Compile Include="Repositories\EFUnitOfWork.cs" />
+      <Compile Include="Repositories\SaleRepository.cs" />
     </ItemGroup>
     <ItemGroup>
       <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
