--- a/Task 4/Test/App.config
+++ b/Task 4/Test/App.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -7,11 +6,11 @@
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
     </configSections>
-
-    <appSettings>
-        <add key="FilePath" value="D:\\Temp\\"/>
-        <add key="FileType" value="*.csv"/>
-    </appSettings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
     <connectionStrings>
         <add name="con" providerName="System.Data.sqlclient"
              connectionString="Data Source=DESKTOP-UOQ5AQK\SQLEXPRESS;Initial Catalog=Test;Integrated Security=true" />
