--- a/Task 4/Task4.Console/App.config
+++ b/Task 4/Task4.Console/App.config
@@ -5,7 +5,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
-        <add key="FilePath" value="..\..\..\Task4.Console\Files\" />
+        <add key="FilePath" value="D:\Temp" />
         <add key="FileType" value="*.csv" />
     </appSettings>
     <connectionStrings>
