--- a/Task 4/Test/App.config
+++ b/Task 4/Test/App.config
@@ -6,13 +6,14 @@
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
     </configSections>
-  <entityFramework>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-    </providers>
-  </entityFramework>
+    <entityFramework>
+        <providers>
+            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+        </providers>
+    </entityFramework>
     <connectionStrings>
-        <add name="con" providerName="System.Data.sqlclient"
-             connectionString="Data Source=DESKTOP-UOQ5AQK\SQLEXPRESS;Initial Catalog=Test;Integrated Security=true" />
+        <add name="con"
+             connectionString="Server=localhost,1433;Database=Test;Trusted_Connection=True;MultipleActiveResultSets=true;"
+             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
