--- a/Task 4/Task4.DAL/Task4.DAL.csproj
+++ b/Task 4/Task4.DAL/Task4.DAL.csproj
@@ -35,7 +35,11 @@
       <Compile Include="EF\DatabaseContext.cs" />
       <Compile Include="Interfaces\IRepository.cs" />
       <Compile Include="Interfaces\IUnitOfWork.cs" />
-      <Compile Include="Repositories\EFUnitOfWork.cs" />
+      <Compile Include="Models\Client.cs" />
+      <Compile Include="Models\Manager.cs" />
+      <Compile Include="Models\Product.cs" />
+      <Compile Include="Models\Sale.cs" />
+      <Compile Include="Repositories\UnitOfWork.cs" />
       <Compile Include="Repositories\SaleRepository.cs" />
     </ItemGroup>
     <ItemGroup>
