--- a/Task 4/Task4.WindowsService/App.config
+++ b/Task 4/Task4.WindowsService/App.config
@@ -10,7 +10,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <appSettings>
-        <add key="FilePath" value="D:\\Temp\\"/>
+        <add key="DirectoryPath" value="D:\\Temp\\"/>
         <add key="FileType" value="*.csv"/>
     </appSettings>
     <connectionStrings>
