--- a/Task 4/Task4.WindowsService/App.config
+++ b/Task 4/Task4.WindowsService/App.config
@@ -12,6 +12,7 @@
     <appSettings>
         <add key="DirectoryPath" value="D:\\Temp\\"/>
         <add key="FileType" value="*.csv"/>
+        <add key="LogPath" value="D:\templog.txt"/>
     </appSettings>
     <connectionStrings>
         <add name="con" providerName="System.Data.sqlclient"
