--- a/Task 4/Task4.BL/Task4.BL.csproj
+++ b/Task 4/Task4.BL/Task4.BL.csproj
@@ -36,8 +36,8 @@
       <Compile Include="CsvObject.cs" />
       <Compile Include="CsvObjectMap.cs" />
       <Compile Include="FileHandler.cs" />
-      <Compile Include="IParser.cs" />
-      <Compile Include="Parser.cs" />
+      <Compile Include="IReader.cs" />
+      <Compile Include="Reader.cs" />
       <Compile Include="Watcher.cs" />
     </ItemGroup>
     <ItemGroup>
@@ -63,6 +63,14 @@
       </Reference>
       <Reference Include="Microsoft.CSharp" />
       <Reference Include="mscorlib" />
+      <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c">
+        <HintPath>..\packages\NLog.4.7.7\lib\net45\NLog.dll</HintPath>
+        <Private>True</Private>
+      </Reference>
+      <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10">
+        <HintPath>..\packages\Serilog.2.10.1-dev-01265\lib\net46\Serilog.dll</HintPath>
+        <Private>True</Private>
+      </Reference>
       <Reference Include="System" />
       <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
         <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -70,6 +78,10 @@
       </Reference>
       <Reference Include="System.ComponentModel.DataAnnotations" />
       <Reference Include="System.Configuration" />
+      <Reference Include="System.Core" />
+      <Reference Include="System.Data" />
+      <Reference Include="System.IO.Compression" />
+      <Reference Include="System.IO.Log" />
       <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
         <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
         <Private>True</Private>
@@ -83,13 +95,16 @@
         <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
         <Private>True</Private>
       </Reference>
+      <Reference Include="System.Runtime.Serialization" />
+      <Reference Include="System.ServiceModel" />
       <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
         <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
         <Private>True</Private>
       </Reference>
+      <Reference Include="System.Transactions" />
+      <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-      <None Include="App.config" />
       <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
