--- a/Task 4/Task4.BL/packages.config
+++ b/Task 4/Task4.BL/packages.config
@@ -5,6 +5,8 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
+  <package id="NLog" version="4.7.7" targetFramework="net472" />
+  <package id="Serilog" version="2.10.1-dev-01265" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
