--- a/Task 4/Task4.WindowsService/App.config
+++ b/Task 4/Task4.WindowsService/App.config
@@ -10,9 +10,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <appSettings>
-        <add key="DirectoryPath" value="D:\\Temp\\"/>
-        <add key="FileType" value="*.csv"/>
-        <add key="LogPath" value="D:\templog.txt"/>
+        <add key="DirectoryPath" value="C:\Users\rabil\Documents\Task 4\Csv files" />
+        <add key="FileType" value="*.csv" />
+        <add key="LogPath" value="C:\Users\rabil\Documents\Task 4\templog.txt"/>
     </appSettings>
     <connectionStrings>
         <add name="con" providerName="System.Data.sqlclient"
