--- a/Task 5/Web/Web.csproj
+++ b/Task 5/Web/Web.csproj
@@ -301,6 +301,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Views\Database\Create.cshtml" />
     <Content Include="Views\Database\Edit.cshtml" />
     <Content Include="Views\Database\Index.cshtml" />
     <Content Include="Web.config" />
