--- a/Task 4/Task4.Console/App.config
+++ b/Task 4/Task4.Console/App.config
@@ -5,12 +5,12 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
-        <add key="DirectoryPath" value="C:\Users\rabil\Documents\Task4\Csv files" />
+        <add key="DirectoryPath" value="C:\Users\rabil\OneDrive\Документы\Task4\Csv files" />
         <add key="FileType" value="*.csv" />
-        <add key="LogPath" value="C:\Users\rabil\Documents\Task4\templog.txt"/>
+        <add key="LogPath" value="C:\Users\rabil\OneDrive\Документы\Task4\templog.txt"/>
     </appSettings>
     <connectionStrings>
         <add name="con" providerName="System.Data.sqlclient"
-             connectionString="Data Source=DESKTOP-UOQ5AQK\SQLEXPRESS;Initial Catalog=Test;Integrated Security=true" />
+             connectionString="Data Source=DESKTOP-3T9HLRI\SQLEXPRESS;Initial Catalog=Test;Integrated Security=true" />
     </connectionStrings>
 </configuration>
