--- a/Task 5/Web/Web.config
+++ b/Task 5/Web/Web.config
@@ -12,7 +12,7 @@
   </configSections>
   <connectionStrings>
       <add name="DefaultConnection" providerName="System.Data.sqlclient"
-           connectionString="Data Source=DESKTOP-3T9HLRI\SQLEXPRESS;Initial Catalog=Test;Integrated Security=true" />
+           connectionString="Data Source=DESKTOP-UOQ5AQK\SQLEXPRESS;Initial Catalog=Test;Integrated Security=true" />
     </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
