--- a/Task 5/Web/packages.config
+++ b/Task 5/Web/packages.config
@@ -25,6 +25,8 @@
   <package id="Microsoft.Extensions.WebEncoders" version="1.0.0-rc1-final" targetFramework="net472" />
   <package id="Microsoft.Extensions.WebEncoders.Core" version="1.0.0-rc1-final" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net472" />
