--- a/Task 5/Task5_DAL/Task5_DAL.csproj
+++ b/Task 5/Task5_DAL/Task5_DAL.csproj
@@ -4,11 +4,11 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{725EAE72-77E8-41FA-95F5-2E7EB52EA818}</ProjectGuid>
+        <ProjectGuid>{CD89648E-B94E-498D-8AE8-CA74FCF9AA75}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>Model</RootNamespace>
-        <AssemblyName>Model</AssemblyName>
+        <RootNamespace>Task5_DAL</RootNamespace>
+        <AssemblyName>Task5_DAL</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
@@ -32,6 +32,14 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+          <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+          <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.ComponentModel.DataAnnotations" />
         <Reference Include="System.Core" />
@@ -39,11 +47,25 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ClientModel.cs" />
-        <Compile Include="ManagerModel.cs" />
-        <Compile Include="ProductModel.cs" />
+        <Compile Include="EF\DatabaseContext.cs" />
+        <Compile Include="Interfaces\IRepository.cs" />
+        <Compile Include="Interfaces\IUnitOfWork.cs" />
+        <Compile Include="Models\Client.cs" />
+        <Compile Include="Models\Manager.cs" />
+        <Compile Include="Models\Product.cs" />
+        <Compile Include="Models\Sale.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="SaleModel.cs" />
+        <Compile Include="Repositories\EFUnitOfWork.cs" />
+        <Compile Include="Repositories\SaleRepository.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="packages.config" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Task5_Model\Task5_Model.csproj">
+        <Project>{725eae72-77e8-41fa-95f5-2e7eb52ea818}</Project>
+        <Name>Task5_Model</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
