--- a/Task 5/Task5_Model/packages.config
+++ b/Task 5/Task5_Model/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Serilog" version="2.10.1-dev-01285" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="4.0.0-dev-00839" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="5.0.0-dev-00909" targetFramework="net472" />
 </packages>
