--- a/Task 5/Task5_WebApp/packages.config
+++ b/Task 5/Task5_WebApp/packages.config
@@ -28,6 +28,11 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net472" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
+  <package id="Serilog" version="2.10.1-dev-01285" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="4.0.0-dev-00839" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="5.0.0-dev-00909" targetFramework="net472" />
+  <package id="SerilogWeb.Classic" version="5.0.52" targetFramework="net472" />
+  <package id="SerilogWeb.Classic.Mvc" version="2.1.25" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net472" />
